--- a/assets/style.css
+++ b/assets/style.css
@@ -12,8 +12,9 @@ body {
 }
 
 #myImg {
-    height: 100%;
-    width: 100%;
+    height: 450px;
+    width: 325px;
+    border-radius: 30%
 }
 
 #myCarousel {
@@ -31,6 +32,7 @@ body {
     opacity : 0.85;
     border-radius: 120px;
     font-size: 125%;
+    height: 95%;
 }
 
 strong{
@@ -48,7 +50,7 @@ strong{
 
 .dropdown-menu {
     background: transparent;
-    background-image: linear-gradient(transparent,rgb(96, 136, 247),rgb(96, 136, 247));
+    background-color: rgb(96, 136, 247);
 }
 
 .dropdown-menu a {
@@ -56,6 +58,9 @@ strong{
     
 }
 
+.tech{
+    opacity : .85;
+}
 
 .project1 {
     border-radius: 15px;
